# llvm-practice

./: .gitignore  CMakeLists.txt
src/: llvm-hello.cpp
